[package]
name = "rscp"
version = "0.1.0"
authors = ["Alexander9673 <59809478+Alexander9673@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
handlebars = "*"
mysql = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }